# qora-llm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
model/: README.md  config.json
src/: config.rs  gemv.rs  generate.rs  gpu_inference.rs  gpu_loader.rs  lib.rs  main.rs  save.rs  simd.rs  system.rs  tokenizer.rs
