[package]
name = "qora"
version = "0.1.0"
edition = "2024"

[features]
gpu = ["cortex/vulkan"]
gpu-metal = ["cortex/metal"]

[dependencies]
cortex = { git = "https://github.com/qora-protocol/cortex", features = ["ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
half = "2"
rayon = "1"
